Menu for OverviewActivity (not tested yet)

--- a/MijnTestApplicatie/app/src/main/res/menu/menu_overview.xml
+++ b/MijnTestApplicatie/app/src/main/res/menu/menu_overview.xml
@@ -3,4 +3,8 @@
     tools:context="com.example.xander.mijntestapplicatie.OverviewActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" android:showAsAction="never" />
+    <item
+        android:id="@+id/goToMaps"
+        android:showAsAction="ifRoom|withText"
+        android:title="View maps"/>
 </menu>
