--- a/MijnTestApplicatie/app/src/main/res/menu/menu_maps.xml
+++ b/MijnTestApplicatie/app/src/main/res/menu/menu_maps.xml
@@ -1,9 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.xander.mijntestapplicatie.OverviewActivity">
+    tools:context="com.example.xander.mijntestapplicatie.MapsActivity">
     <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
         <!--android:orderInCategory="100" android:showAsAction="never" />-->
     <item
-        android:id="@+id/goToMaps"
-        android:title="View maps"/>
+        android:id="@+id/goToOverview"
+        android:title="View overview"/>
 </menu>
