--- a/MijnTestApplicatie/app/src/main/res/layout/activity_maps.xml
+++ b/MijnTestApplicatie/app/src/main/res/layout/activity_maps.xml
@@ -1,5 +1,5 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:id="@+id/map"
-    tools:context="com.example.xander.mijntestapplicatie.MapsActivity"
+    tools:context="nl.xannic.minor.touristguide.MapsActivity"
     android:name="com.google.android.gms.maps.SupportMapFragment" />
