--- a/MijnTestApplicatie/app/src/main/res/layout/activity_my.xml
+++ b/MijnTestApplicatie/app/src/main/res/layout/activity_my.xml
@@ -52,5 +52,25 @@
         android:layout_alignRight="@+id/btEditNotification"
         android:layout_alignEnd="@+id/btEditNotification" />
 
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Route Test"
+        android:id="@+id/btRoutePlanTest"
+        android:layout_below="@+id/btGoToLocation"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/btGoToLocation"
+        android:layout_alignEnd="@+id/btGoToLocation" />
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Route Test 2(eigenlijk 1 naja yolo)"
+        android:id="@+id/btRoutePlanTest2"
+        android:layout_below="@+id/btRoutePlanTest"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 
 </RelativeLayout>
