--- a/TouristGuideApplicatie/app/src/main/res/layout/lv_overview_row.xml
+++ b/TouristGuideApplicatie/app/src/main/res/layout/lv_overview_row.xml
@@ -35,15 +35,12 @@
             android:layout_marginTop="3dp"
             />
 
-        <TextView
-            android:id="@+id/tvDistance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tvTitle"
-
-
-
-            />
+        <!--<TextView-->
+            <!--android:id="@+id/tvDistance"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@+id/tvTitle"-->
+            <!--/>-->
     </RelativeLayout>
 
 </RelativeLayout>
