--- a/TouristGuideApplicatie/app/src/main/res/layout/submit.xml
+++ b/TouristGuideApplicatie/app/src/main/res/layout/submit.xml
@@ -74,7 +74,7 @@
         android:layout_below="@+id/spinnerCategorie"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
     <EditText
         android:layout_width="fill_parent"
@@ -85,7 +85,7 @@
         android:layout_below="@+id/tvInfo"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
     <TextView
         android:layout_width="fill_parent"
@@ -95,7 +95,7 @@
         android:layout_below="@+id/etInfo"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
     <EditText
         android:layout_width="fill_parent"
@@ -104,7 +104,7 @@
         android:layout_below="@+id/tvPlaceName"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
     <TextView
         android:layout_width="fill_parent"
@@ -113,7 +113,8 @@
         android:id="@+id/tvWebsite"
         android:layout_below="@+id/etPlaceName"
         android:layout_toRightOf="@+id/ivPicture"
-        android:layout_toEndOf="@+id/ivPicture" />
+        android:layout_toEndOf="@+id/ivPicture"
+        android:visibility="gone" />
 
     <EditText
         android:layout_width="fill_parent"
@@ -122,7 +123,8 @@
         android:hint="Vul de website in"
         android:layout_below="@+id/tvWebsite"
         android:layout_toRightOf="@+id/ivPicture"
-        android:layout_toEndOf="@+id/ivPicture" />
+        android:layout_toEndOf="@+id/ivPicture"
+        android:visibility="gone" />
 
     <TextView
         android:layout_width="fill_parent"
@@ -131,6 +133,7 @@
         android:id="@+id/tvOpeningstijd"
         android:layout_below="@+id/etWebsite"
         android:layout_toRightOf="@+id/ivPicture"
-        android:layout_toEndOf="@+id/ivPicture" />
+        android:layout_toEndOf="@+id/ivPicture"
+        android:visibility="gone" />
 
 </RelativeLayout>
