--- a/TouristGuideApplicatie/app/src/main/res/layout/lv_navdrawer_row.xml
+++ b/TouristGuideApplicatie/app/src/main/res/layout/lv_navdrawer_row.xml
@@ -1,11 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".Main$PlaceholderFragment">
-
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="5dip" >
 
     <LinearLayout android:id="@+id/llCategoryColor"
         android:layout_width="wrap_content"
@@ -15,10 +13,12 @@
         android:layout_marginRight="5dip">
 
         <ImageView
-            android:id="@+id/ivColorImage"
+            android:id="@+id/imgToggle"
             android:layout_width="50dip"
             android:layout_height="50dip"
-            android:src="@drawable/red"/>
+            android:checked="true"
+            android:src="@drawable/red"
+            />
 
     </LinearLayout>
 
@@ -29,10 +29,22 @@
         android:layout_marginRight="5dip"
         android:layout_alignTop="@+id/llCategoryColor"
         android:layout_toRightOf="@+id/llCategoryColor"
+        android:gravity="center_vertical"
+        android:layout_gravity="center_vertical"
+        android:layout_centerVertical="true"
+
         >
 
-        <TextView android:id="@+id/section_label" android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="50dip"
+            android:text="Bladiebla"
+            android:gravity="center"
+            android:layout_centerInParent="true"
+
+            />
 
         <!--<TextView-->
         <!--android:id="@+id/tvDistance"-->
@@ -41,7 +53,5 @@
         <!--android:layout_below="@+id/tvTitle"-->
         <!--/>-->
     </RelativeLayout>
-
-
 
 </RelativeLayout>
