--- a/TouristGuideApplicatie/app/src/main/res/layout/activity_splash_screen.xml
+++ b/TouristGuideApplicatie/app/src/main/res/layout/activity_splash_screen.xml
@@ -18,4 +18,13 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="go to main"
+        android:id="@+id/btnGoToMain"
+        android:layout_alignBottom="@+id/imgSplash"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
