--- a/TouristGuideApplicatie/app/src/main/res/layout/activity_item.xml
+++ b/TouristGuideApplicatie/app/src/main/res/layout/activity_item.xml
@@ -1,44 +1,47 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="nl.xannic.minor.touristguide.itemActivity">
+<?xml version="1.0" encoding="utf-8"?>
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Name"
-        android:id="@+id/tvName"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Category"
-        android:id="@+id/tvCategory"
-        android:layout_below="@+id/tvName"
-        android:layout_alignRight="@+id/tvName"
-        android:layout_alignEnd="@+id/tvName" />
-
-    <TextView
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    >
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="ImageSource"
-        android:id="@+id/tvImageSource"
-        android:layout_below="@+id/tvCategory"
-        android:layout_alignParentLeft="true" />
-
-    <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-
+        android:orientation="vertical"
+        >
+        <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:adjustViewBounds="true"
         android:id="@+id/ivImage"
-        android:layout_below="@+id/tvImageSource"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="84dp" />
+        android:layout_gravity="center"
+            android:layout_marginTop="10dip" />
 
-</RelativeLayout>
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Titel"
+            android:textSize="25dp"
+            android:id="@+id/tvName"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:editable="true"
+            android:layout_marginTop="25dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp" />
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvDescription"
+            android:layout_marginTop="25dip"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="25dp" />
+
+    </LinearLayout>
+</ScrollView>
+
+<!--</RelativeLayout>-->
