--- a/TouristGuideApplicatie/app/src/main/res/layout/activity_splash_screen.xml
+++ b/TouristGuideApplicatie/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,7 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#009688"
-    tools:context="nl.xannic.minor.touristguideapplicatie.SplashScreen"
+    tools:context="nl.xannic.minor.rondjerotterdam.SplashScreen"
     >
 
 
@@ -15,7 +15,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/imgSplash"
-        android:src="@drawable/splash"
+        android:src="@drawable/splash_rondje_rotterdam"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
